Fixing slider width on small screens

--- a/client/views/ipads/ipads.import.less
+++ b/client/views/ipads/ipads.import.less
@@ -13,3 +13,6 @@
     display: block;
     width: 100%;
 }
+.clear {
+	float: none;
+}
